--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,11 @@
 {
   "name": "prefixes.scss",
-  "version": "0.1.1",
+  "version": "0.2.0",
   "homepage": "https://github.com/pandao/prefixes.scss",
   "authors": [
     "pandao <272383090@qq.com>"
   ],
-  "description": "CSS(3) prefixes mixins library for Sass/Scss. Free installation, custom you need css prefixes.",
+  "description": "CSS(3) prefixes mixins library for Sass/Scss, Custom you need CSS prefixes.",
   "keywords": [
     "css",
     "prefix",
@@ -18,6 +18,7 @@
     "**/.*",
     "node_modules",
     "bower_components",
+    "research",
     "test",
     "tests"
   ]
